--- a/css/style.css
+++ b/css/style.css
@@ -390,15 +390,19 @@ header {
 
 .portfolio {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    
+    grid-template-columns: repeat(auto-fit, minmax(700px, 1fr));
 }
 
 .portfolio__item {
-    background: var(--clr-accent);
+    border: 3px solid;
+    border-color: #303030;
+    
     overflow: hidden;
 }
 
 .portfolio__img {
+
     transition: 
         transform 750ms cubic-bezier(.5, 0, .5, 1),
         opacity 250ms linear;
