--- a/layout/style.css
+++ b/layout/style.css
@@ -44,6 +44,7 @@ body, html {
     justify-content: space-between;
     padding: 20px;
     color: whitesmoke;
+    background-color: #2e2e2e69;
 
 }
 .nav-links {
@@ -369,7 +370,73 @@ h5{
     margin: 20px auto;
 }
 
+/* Slide show */
 
+  .slidershow{
+    width: 700px;
+    height: 400px;
+    overflow: hidden;
+  }
+  .middle{
+
+    transform: translate(0%,0%);
+  }
+  .slides-navigation{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+  }
+  .bar{
+    width: 50px;
+    height: 10px;
+    border: 2px solid #fff;
+    margin: 6px;
+    cursor: pointer;
+    transition: 0.4s;
+  }
+  .bar:hover{
+    background: #fff;
+  }
+  
+  input[name="r"]{
+      position: absolute;
+      visibility: hidden;
+  }
+  
+  .slides{
+    width: 500%;
+    height: 100%;
+    display: flex;
+  }
+  
+  .slide{
+    width: 20%;
+    transition: 0.6s;
+  }
+  .slide img{
+    width: 100%;
+    height: 100%;
+  }
+  
+  #r1:checked ~ .s1{
+    margin-left: 0;
+  }
+  #r2:checked ~ .s1{
+    margin-left: -20%;
+  }
+  #r3:checked ~ .s1{
+    margin-left: -40%;
+  }
+  #r4:checked ~ .s1{
+    margin-left: -60%;
+  }
+  #r5:checked ~ .s1{
+    margin-left: -80%;
+  }
+  
+  
 
 /* Mobile  */
 @media only screen and (max-width:850px){
@@ -462,6 +529,16 @@ h5{
         width: 80vw;
         padding: 15px 5px;
         height: 400px;
+    }
+
+    .middle{
+
+        transform: translate(0%,0%);
+      }
+    .slidershow{
+    width: 800px;
+    height: 450px;
+    overflow: hidden;
     }
 
     
