--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url(./img/main.jpg);
+	background-image: url(../img/main.jpg);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
@@ -293,7 +293,7 @@ p {
 	flex-direction: column;
 	padding: 30px;
 	border-radius: 10px;
-	background-image: url(./img/img-1.png);
+	background-image: url(../img/img-1.png);
 	background-size: cover;
 	margin: 10px 5%;
 	position: relative;
